# test_nbsphinx

./: .flake8  .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  DISCLAIMER.rst  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
QENSmodels/: __init__.py  background_polynomials.py  brownian_translational_diffusion.py  chudley_elliot_diffusion.py  chudley_elliott_diffusion.py  delta.py  delta_lorentz.py  delta_two_lorentz.py  equivalent_sites_circle.py  gaussian.py  gaussian_model_3d.py  isotropic_rotational_diffusion.py  jump_sites_log_norm_dist.py  jump_translational_diffusion.py  lorentzian.py  water_teixeira.py
docs/: Example_QENSmodels_bumps_BrownianDiff_fit.ipynb  Makefile  QENSmodels.rst  README.rst  bumps_BrownianDiff_fit.ipynb  bumps_ChudleyElliotDiff_fit.ipynb  bumps_DeltaLorentz_fit.ipynb  bumps_IsoRot_fit.ipynb  bumps_JumpDiffIsoRot_fit.ipynb  bumps_JumpDiff_fit.ipynb  bumps_waterIN5_delta_two_lorentz_fit.ipynb  bumps_waterIN5_lorentzian_plus_isorotdiff_fit.ipynb  bumps_waterIN5_water_teixeira_fit.ipynb  conf.py  examples.rst  gallery_notebooks.rst  handling_units.rst  index.rst  lmfit_EquivalentSitesCircle_fit.ipynb  lmfit_GaussianModel3D_fit.ipynb  lmfit_lorentzian_and_backgd_fit.ipynb  lmfit_two_lorentzian_fit.ipynb  lmfit_waterIN5_teixeira_fit.ipynb  make.bat  modules.rst  requirements.txt  scipy_JumpSitesLogNormDist_fit.ipynb  scipy_lorentzian_fit.ipynb  tools.rst
examples/: bumps_waterIN5_delta_two_lorentz_fit.ipynb  examples.rst  scipy_lorentzian_fit.ipynb  (+2 more)
(+80 files in other folders)
