# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "test_nbsphinx"
version = "0.1.5"
description = "Library of models for fitting QENS data"
readme = "README.rst"
authors = [
    {name = "Celine Durniak"},
]
license = { file = "LICENSE.txt" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering"
]

keywords = ["fitting models", "Quasi-Elastic Neutron Scattering"]
dependencies = ['scipy', 'numpy']
requires-python = ">=3.7"


[project.optional-dependencies]
dev = ["pytest", "flake8", "mypy", "matplotlib", "ipympl", "h5py", "nbsphinx", "sphinx-rtd-theme",
       "jupyterlab", "bumps >= 0.7.6", "lmfit", "ipywidgets", "pandas",
       "jupyter-nbextensions-configurator"]
examples = ["matplotlib", "ipympl", "h5py", "nbsphinx", "sphinx-rtd-theme", "jupyterlab",
            "jupyter-nbextensions-configurator", "bumps >= 0.7.6", "lmfit", "ipywidgets", "pandas"]


[project.urls]
Homepage = 'https://github.com/celinedurniak/test_nbsphinx'


[tool.bumpver]
current_version = "0.1.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', ]
"/QENSmodels/__init__.py" = ["{version}"]
